# betterlytics

./: .env.example  .env.production.example  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: Cargo.toml
backend/src/: config.rs  lib.rs  main.rs
backend/src/monitor/: init.rs  service.rs
backend/src/notifications/: cache.rs  crypto.rs  engine.rs  history.rs  mod.rs  notifier.rs  repository.rs
backend/src/notifications/integrations/: discord.rs  mod.rs  pushover.rs  slack.rs  teams.rs  webhook.rs
dashboard/: package.json
dashboard/messages/: da.json  en.json  it.json  nb.json
dashboard/prisma/: schema.prisma
dashboard/prisma/migrations/20260221164037_dashboard_integration_schema/: migration.sql
dashboard/src/: middleware.ts
dashboard/src/app/(protected)/: TimezoneCookieInitializer.tsx
dashboard/src/components/: BAPieChart.tsx
dashboard/src/components/dialogs/: ConfirmDialog.tsx
dashboard/src/components/filters/: use-query-filter-search.ts
dashboard/src/constants/: i18n.ts
dashboard/src/content/changelog/: index.ts
dashboard/src/entities/analytics/: analyticsQuery.entities.ts
dashboard/src/entities/dashboard/: integration.entities.ts
dashboard/src/hooks/: use-analytics-query.ts  use-event-properties.ts
dashboard/src/lib/: clickhouse.ts  crypto.ts  env.ts  feature-flags-factory.ts  feature-flags.ts  toSiteQuery.ts
dashboard/src/observability/: clickhouse-instrumented.ts
dashboard/src/presenters/: toAreaChart.ts  toDataTable.ts  toFormatted.ts  toPartialPercentageCompare.ts  toPieChart.ts  toStackedAreaChart.ts
dashboard/src/repositories/clickhouse/: campaign.repository.ts  devices.repository.ts  events.repository.ts  filters.repository.ts  geography.repository.ts  outboundLinks.repository.ts  pages.repository.ts  referrers.repository.ts  reports.repository.ts  sessionReplays.repository.ts  userJourney.repository.ts  visitors.repository.ts  webVitals.repository.ts  (+1 more)
dashboard/src/utils/: filterSearchParams.ts
docs/: package.json
docs/src/: mdx-components.js
migrations/: 19_add_notification_history.sql
scripts/: post_migrate_siteconfig_ro.js
(+99 files in other folders)
